--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,8 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
 [Xx]64/
 [Xx]86/
-[Bb]uild/
-bld/
-[Bb]in/
 [Oo]bj/
 
 # Visual Studio 2015 cache/options directory
@@ -240,3 +235,4 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/Combine PowerPoint Files/bin/Release/Thumbs.db
